kube-resource/DiscoveryService/mysql-service-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service-k8s
spec:
  selector:
    app: mysql-deployment-k8s
  ports:
    - port: 3306
