kube-resource/DiscoveryService/IPtablesbackup.txt
# Generated by iptables-save v1.8.7 on Tue May  3 13:49:27 2022
*raw
:PREROUTING ACCEPT [17184042:3321902924]
:OUTPUT ACCEPT [17221341:3500739152]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:njdnLwYeGqBJyMxW" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:rz86uTUcEZAfFsh7" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:pN0F5zD0b8yf9W1Z" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:XFX5xbM8B9qR10JG" -j MARK --set-xmark 0x0/0xf0000
-A cali-PREROUTING -i cali+ -m comment --comment "cali:EWMPb0zVROM-woQp" -j MARK --set-xmark 0x40000/0x40000
-A cali-PREROUTING -m comment --comment "cali:mPIOOWmbH3iO0R90" -m mark --mark 0x40000/0x40000 -m rpfilter --validmark --invert -j DROP
-A cali-PREROUTING -m comment --comment "cali:8eOxmFpkWr0RjKXR" -m mark --mark 0x0/0x40000 -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:F-nExspj_POyei0v" -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Tue May  3 13:49:27 2022
# Generated by iptables-save v1.8.7 on Tue May  3 13:49:27 2022
*filter
:INPUT ACCEPT [17864:2861395]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [18669:3324916]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SERVICES - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-cidr-block - [0:0]
:cali-from-hep-forward - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-fw-cali29e624a99b4 - [0:0]
:cali-fw-cali326a3532366 - [0:0]
:cali-fw-cali514a9a51d21 - [0:0]
:cali-fw-cali778ce22c255 - [0:0]
:cali-fw-calid9825211534 - [0:0]
:cali-pi-_3CJ_GmvE9pcCktVJ2ep - [0:0]
:cali-pri-_4yi5_iSUAwsU8zMHTk - [0:0]
:cali-pri-_kJqfZpgUe7r2t4A-14 - [0:0]
:cali-pri-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pri-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pri-kns.calico-system - [0:0]
:cali-pri-kns.kube-system - [0:0]
:cali-pro-_4yi5_iSUAwsU8zMHTk - [0:0]
:cali-pro-_kJqfZpgUe7r2t4A-14 - [0:0]
:cali-pro-_nzzjLvInId1gPHmQz_ - [0:0]
:cali-pro-_u2Tn2rSoAPffvE7JO6 - [0:0]
:cali-pro-kns.calico-system - [0:0]
:cali-pro-kns.kube-system - [0:0]
:cali-to-hep-forward - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-tw-cali29e624a99b4 - [0:0]
:cali-tw-cali326a3532366 - [0:0]
:cali-tw-cali514a9a51d21 - [0:0]
:cali-tw-cali778ce22c255 - [0:0]
:cali-tw-calid9825211534 - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -m comment --comment "cali:S93hcgKJrXEqnTfs" -m comment --comment "Policy explicitly accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A FORWARD -m comment --comment "cali:mp77cMpurHhyjLrM" -j MARK --set-xmark 0x10000/0x10000
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A KUBE-EXTERNAL-SERVICES -p tcp -m comment --comment "default/auth-service-k8s has no endpoints" -m addrtype --dst-type LOCAL -m tcp --dport 31333 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-EXTERNAL-SERVICES -p tcp -m comment --comment "default/urlshortener-service-k8s has no endpoints" -m addrtype --dst-type LOCAL -m tcp --dport 31856 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-SERVICES -d 10.102.190.163/32 -p tcp -m comment --comment "default/auth-service-k8s has no endpoints" -m tcp --dport 7070 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 10.103.149.37/32 -p tcp -m comment --comment "default/urlshortener-service-k8s has no endpoints" -m tcp --dport 8080 -j REJECT --reject-with icmp-port-unreachable
-A cali-FORWARD -m comment --comment "cali:vjrMJCRpqwy5oRoX" -j MARK --set-xmark 0x0/0xe0000
-A cali-FORWARD -m comment --comment "cali:A_sPAO0mcxbT9mOV" -m mark --mark 0x0/0x10000 -j cali-from-hep-forward
-A cali-FORWARD -i cali+ -m comment --comment "cali:8ZoYfO5HKXWbB3pk" -j cali-from-wl-dispatch
-A cali-FORWARD -o cali+ -m comment --comment "cali:jdEuaPBe14V2hutn" -j cali-to-wl-dispatch
-A cali-FORWARD -m comment --comment "cali:12bc6HljsMKsmfr-" -j cali-to-hep-forward
-A cali-FORWARD -m comment --comment "cali:NOSxoaGx8OIstr1z" -j cali-cidr-block
-A cali-INPUT -p ipencap -m comment --comment "cali:PajejrV4aFdkZojI" -m comment --comment "Allow IPIP packets from Calico hosts" -m set --match-set cali40all-hosts-net src -m addrtype --dst-type LOCAL -j ACCEPT
-A cali-INPUT -p ipencap -m comment --comment "cali:_wjq-Yrma8Ly1Svo" -m comment --comment "Drop IPIP packets from non-Calico hosts" -j DROP
-A cali-INPUT -i cali+ -m comment --comment "cali:8TZGxLWh_Eiz66wc" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:6McIeIDvPdL6PE1T" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-INPUT -m comment --comment "cali:YGPbrUms7NId8xVa" -j MARK --set-xmark 0x0/0xf0000
-A cali-INPUT -m comment --comment "cali:2gmY7Bg2i0i84Wk_" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:q-Vz2ZT9iGE331LL" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:Mq1_rAdXXH3YkrzW" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-OUTPUT -o cali+ -m comment --comment "cali:69FkRTJDvD5Vu6Vl" -j RETURN
-A cali-OUTPUT -p ipencap -m comment --comment "cali:AnEsmO6bDZbQntWW" -m comment --comment "Allow IPIP packets to other Calico hosts" -m set --match-set cali40all-hosts-net dst -m addrtype --src-type LOCAL -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:9e9Uf3GU5tX--Lxy" -j MARK --set-xmark 0x0/0xf0000
-A cali-OUTPUT -m comment --comment "cali:0f3LDz_VKuHFaA2K" -m conntrack ! --ctstate DNAT -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:OgU2f8BVEAZ_fwkq" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-from-wl-dispatch -i cali29e624a99b4 -m comment --comment "cali:BOsaXRMn7PseDrSi" -g cali-fw-cali29e624a99b4
-A cali-from-wl-dispatch -i cali326a3532366 -m comment --comment "cali:4QFHQZ9tZxH5aBxc" -g cali-fw-cali326a3532366
-A cali-from-wl-dispatch -i cali514a9a51d21 -m comment --comment "cali:L2MBLvrS03B4PMZf" -g cali-fw-cali514a9a51d21
-A cali-from-wl-dispatch -i cali778ce22c255 -m comment --comment "cali:vtgtIxnO_XnnKhR2" -g cali-fw-cali778ce22c255
-A cali-from-wl-dispatch -i calid9825211534 -m comment --comment "cali:FlFk5m363QOVop9r" -g cali-fw-calid9825211534
-A cali-from-wl-dispatch -m comment --comment "cali:cPoZ5GFuro07sF0E" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-cali29e624a99b4 -m comment --comment "cali:r7ooDO8m_TLdQMQ2" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali29e624a99b4 -m comment --comment "cali:SSQor3OsTFmqLoRd" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali29e624a99b4 -m comment --comment "cali:STmzoJ1kuUqDUt8s" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali29e624a99b4 -p udp -m comment --comment "cali:_wtYAEVI2PXe7Lmt" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali29e624a99b4 -p ipencap -m comment --comment "cali:wjYVA-YSKX8XUmE5" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali29e624a99b4 -m comment --comment "cali:hVT6wEdExOEjp6qR" -j cali-pro-_kJqfZpgUe7r2t4A-14
-A cali-fw-cali29e624a99b4 -m comment --comment "cali:9YUUX0TMbteGp7hs" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali29e624a99b4 -m comment --comment "cali:0fz36bw5cYzRTN9f" -j cali-pro-_4yi5_iSUAwsU8zMHTk
-A cali-fw-cali29e624a99b4 -m comment --comment "cali:n08TMXi6h3u9rj0w" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali29e624a99b4 -m comment --comment "cali:x_uFw2SKBUjJxNwZ" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali326a3532366 -m comment --comment "cali:ZtSBvSPgoQzw0Dwk" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali326a3532366 -m comment --comment "cali:BdQ-g8TGruypbxvh" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali326a3532366 -m comment --comment "cali:k3G3kRSfd5esXhwj" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali326a3532366 -p udp -m comment --comment "cali:gIEF-9ONmnA-PX20" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali326a3532366 -p ipencap -m comment --comment "cali:jxNAhyjALkRdQ0Rp" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali326a3532366 -m comment --comment "cali:lh3TVc1rrk0Lqgx4" -j cali-pro-kns.calico-system
-A cali-fw-cali326a3532366 -m comment --comment "cali:IfUjfAxr0QTgfc64" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali326a3532366 -m comment --comment "cali:eMmFQ8NmKPMFDRrO" -j cali-pro-_nzzjLvInId1gPHmQz_
-A cali-fw-cali326a3532366 -m comment --comment "cali:yTXqPndRMEWiCOfH" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali326a3532366 -m comment --comment "cali:e1HzyRFXhSAE2u12" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali514a9a51d21 -m comment --comment "cali:QNrHYImoVR6XnLQz" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali514a9a51d21 -m comment --comment "cali:qKz-kOGUetyiYJzU" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali514a9a51d21 -m comment --comment "cali:t5hXNmOxsD-O64oo" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali514a9a51d21 -p udp -m comment --comment "cali:xFP3AaJYlp-42Qsd" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali514a9a51d21 -p ipencap -m comment --comment "cali:x6jtvCS1xEe02LoZ" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali514a9a51d21 -m comment --comment "cali:OCNXhwB84jwerya-" -j cali-pro-kns.kube-system
-A cali-fw-cali514a9a51d21 -m comment --comment "cali:G2ZbppYFBrwppC0_" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali514a9a51d21 -m comment --comment "cali:xhlOnu5Jp_wtGP4G" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-cali514a9a51d21 -m comment --comment "cali:r_JHBu-ks5ESAovq" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali514a9a51d21 -m comment --comment "cali:VwltpMY7rh2mrbJL" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali778ce22c255 -m comment --comment "cali:YEH462PGqmkK8Yin" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali778ce22c255 -m comment --comment "cali:gLEbqmVi03Wjd_Nh" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali778ce22c255 -m comment --comment "cali:lKCdQugjalFQiHtM" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-cali778ce22c255 -p udp -m comment --comment "cali:KIzJ9KLZFSQYH_Sc" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-cali778ce22c255 -p ipencap -m comment --comment "cali:N_YgIUDGriFXLBvi" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-cali778ce22c255 -m comment --comment "cali:hzn_cEgd1QuBV5J-" -j cali-pro-kns.kube-system
-A cali-fw-cali778ce22c255 -m comment --comment "cali:A1Ql2GzJSpfOOGs7" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali778ce22c255 -m comment --comment "cali:LOVicxEsJIZo1JTJ" -j cali-pro-_u2Tn2rSoAPffvE7JO6
-A cali-fw-cali778ce22c255 -m comment --comment "cali:u0e5JzWFTXnl_YVB" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-cali778ce22c255 -m comment --comment "cali:R5PUsMIn3F6PZICi" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calid9825211534 -m comment --comment "cali:GnovHdZrunv_HAUP" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calid9825211534 -m comment --comment "cali:eAMVtZ5jX8HlpS0K" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calid9825211534 -m comment --comment "cali:CZ4jbPrvGK5FjUQ0" -j MARK --set-xmark 0x0/0x10000
-A cali-fw-calid9825211534 -p udp -m comment --comment "cali:TxeR0Ba4c6w0AU1J" -m comment --comment "Drop VXLAN encapped packets originating in workloads" -m multiport --dports 4789 -j DROP
-A cali-fw-calid9825211534 -p ipencap -m comment --comment "cali:zsivtmkVs0c7Nj6a" -m comment --comment "Drop IPinIP encapped packets originating in workloads" -j DROP
-A cali-fw-calid9825211534 -m comment --comment "cali:GqJScBl-03ZBB_dZ" -j cali-pro-_kJqfZpgUe7r2t4A-14
-A cali-fw-calid9825211534 -m comment --comment "cali:W-YV94OjdGqhQJOb" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calid9825211534 -m comment --comment "cali:xLyq0eZQB13Ez4G1" -j cali-pro-_4yi5_iSUAwsU8zMHTk
-A cali-fw-calid9825211534 -m comment --comment "cali:GMjwUJLoF8HcN_s4" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-fw-calid9825211534 -m comment --comment "cali:virETiFBDCCPq7gu" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-pi-_3CJ_GmvE9pcCktVJ2ep -p tcp -m comment --comment "cali:I0yo8ky1YADcMXRf" -m comment --comment "Policy calico-apiserver/knp.default.allow-apiserver ingress" -m multiport --dports 5443 -j MARK --set-xmark 0x10000/0x10000
-A cali-pi-_3CJ_GmvE9pcCktVJ2ep -m comment --comment "cali:vcoXnuptt0fs1M8q" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-_4yi5_iSUAwsU8zMHTk -m comment --comment "cali:ZYnaZZFwsSjfXO4C" -m comment --comment "Profile ksa.calico-apiserver.calico-apiserver ingress"
-A cali-pri-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:IQx0SzlDGn6BPv0A" -m comment --comment "Profile kns.calico-apiserver ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:hnAzdaRiFbG1YPHK" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-_nzzjLvInId1gPHmQz_ -m comment --comment "cali:UQoEf2WCdU0bPTCb" -m comment --comment "Profile ksa.calico-system.calico-kube-controllers ingress"
-A cali-pri-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:WqgznqAQ-uYV0oBx" -m comment --comment "Profile ksa.kube-system.coredns ingress"
-A cali-pri-kns.calico-system -m comment --comment "cali:hLANj-OVIyT53h_j" -m comment --comment "Profile kns.calico-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.calico-system -m comment --comment "cali:AHts2xleddEc04Gr" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pri-kns.kube-system -m comment --comment "cali:J1TyxtHWd0qaBGK-" -m comment --comment "Profile kns.kube-system ingress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pri-kns.kube-system -m comment --comment "cali:QIB6k7eEKdIg73Jp" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-_4yi5_iSUAwsU8zMHTk -m comment --comment "cali:Pp_dQp2FeNabRhyi" -m comment --comment "Profile ksa.calico-apiserver.calico-apiserver egress"
-A cali-pro-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:_cFTxC141wwWRzyZ" -m comment --comment "Profile kns.calico-apiserver egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-_kJqfZpgUe7r2t4A-14 -m comment --comment "cali:dvDa77rVzpVqK7ZF" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-_nzzjLvInId1gPHmQz_ -m comment --comment "cali:5bHxBXLMkJKgC6dk" -m comment --comment "Profile ksa.calico-system.calico-kube-controllers egress"
-A cali-pro-_u2Tn2rSoAPffvE7JO6 -m comment --comment "cali:0-_UPh39dt5XfhmJ" -m comment --comment "Profile ksa.kube-system.coredns egress"
-A cali-pro-kns.calico-system -m comment --comment "cali:gWxJzCZXxl31NR0P" -m comment --comment "Profile kns.calico-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.calico-system -m comment --comment "cali:rHIqpX_kWRu4q0wP" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-pro-kns.kube-system -m comment --comment "cali:tgOR2S8DVHZW3F1M" -m comment --comment "Profile kns.kube-system egress" -j MARK --set-xmark 0x10000/0x10000
-A cali-pro-kns.kube-system -m comment --comment "cali:HVEEtYPJsiGRXCIt" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-to-wl-dispatch -o cali29e624a99b4 -m comment --comment "cali:S9rzzJ7IhzMfQNFl" -g cali-tw-cali29e624a99b4
-A cali-to-wl-dispatch -o cali326a3532366 -m comment --comment "cali:PJTAK5M0RvVOipQ4" -g cali-tw-cali326a3532366
-A cali-to-wl-dispatch -o cali514a9a51d21 -m comment --comment "cali:S8g2Q0K0Gev3NPfr" -g cali-tw-cali514a9a51d21
-A cali-to-wl-dispatch -o cali778ce22c255 -m comment --comment "cali:9X324-4LU-CQHwfU" -g cali-tw-cali778ce22c255
-A cali-to-wl-dispatch -o calid9825211534 -m comment --comment "cali:8qpXNMlCmdTilx_7" -g cali-tw-calid9825211534
-A cali-to-wl-dispatch -m comment --comment "cali:9xs_8Ntdzky1Z5RW" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:WGKbiRjNxfIBUH73" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:Hq4B-imL3zyXsonf" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:6R4jTjUPjPK-vwJ1" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:HoCgAAJiTsCVA_mZ" -m comment --comment "Start of policies" -j MARK --set-xmark 0x0/0x20000
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:uXBfLUGPK-lM2N-M" -m mark --mark 0x0/0x20000 -j cali-pi-_3CJ_GmvE9pcCktVJ2ep
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:WqAPJ8xUV-U4UWM8" -m comment --comment "Return if policy accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:eeFxjKxEpiksnoOn" -m comment --comment "Drop if no policies passed packet" -m mark --mark 0x0/0x20000 -j DROP
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:bl2qNz3jcx5O1LY0" -j cali-pri-_kJqfZpgUe7r2t4A-14
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:gu-iSk-zucJHUj00" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:qZypqMsUfiaqsfsv" -j cali-pri-_4yi5_iSUAwsU8zMHTk
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:z9-PgUQbYKMOkDus" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali29e624a99b4 -m comment --comment "cali:V1lxu8AEBEUx40Up" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali326a3532366 -m comment --comment "cali:8mnQmBa6AIF6U6M0" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali326a3532366 -m comment --comment "cali:pZ1CaJLqAEfQlW66" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali326a3532366 -m comment --comment "cali:RpL7PT8sota_qKDi" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali326a3532366 -m comment --comment "cali:1XYnNl0b5-Ldqss2" -j cali-pri-kns.calico-system
-A cali-tw-cali326a3532366 -m comment --comment "cali:GDofUgyniWoO3rlJ" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali326a3532366 -m comment --comment "cali:hQ5ok3RzNsfsByvN" -j cali-pri-_nzzjLvInId1gPHmQz_
-A cali-tw-cali326a3532366 -m comment --comment "cali:bQMWICXExxtD2WwG" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali326a3532366 -m comment --comment "cali:XPYL_c000jdt8LVJ" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali514a9a51d21 -m comment --comment "cali:fXcrY1ap8c977JDK" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali514a9a51d21 -m comment --comment "cali:kN9BX9QRFCImOY4-" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali514a9a51d21 -m comment --comment "cali:z9140XVaMD0e0Jlr" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali514a9a51d21 -m comment --comment "cali:tFmH_e4_5YVNict_" -j cali-pri-kns.kube-system
-A cali-tw-cali514a9a51d21 -m comment --comment "cali:MgFrtsxySgFQLX_H" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali514a9a51d21 -m comment --comment "cali:yFB-h5n9jJaHyuLf" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-cali514a9a51d21 -m comment --comment "cali:i3v1kQyjYC4szizR" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali514a9a51d21 -m comment --comment "cali:e2e-hOJJW7YpHY1-" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali778ce22c255 -m comment --comment "cali:VkS2ud80Ypp_MNPY" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali778ce22c255 -m comment --comment "cali:BE2ZlVlemFFmXs5N" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali778ce22c255 -m comment --comment "cali:VMPZBobj28iMvCRD" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-cali778ce22c255 -m comment --comment "cali:9NGbcl33FCF-TAGw" -j cali-pri-kns.kube-system
-A cali-tw-cali778ce22c255 -m comment --comment "cali:ZVZal3r-t0iVRiZ-" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali778ce22c255 -m comment --comment "cali:csgqqGZfGmUH9KBU" -j cali-pri-_u2Tn2rSoAPffvE7JO6
-A cali-tw-cali778ce22c255 -m comment --comment "cali:BxLA8tGf5K5N78IW" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-cali778ce22c255 -m comment --comment "cali:UDzvk1gHiozClPqn" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calid9825211534 -m comment --comment "cali:cWxMMKppqWu0rsFq" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calid9825211534 -m comment --comment "cali:rwQPV5Y54p8flgjO" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calid9825211534 -m comment --comment "cali:GQMDUhFDJSdtkzzn" -j MARK --set-xmark 0x0/0x10000
-A cali-tw-calid9825211534 -m comment --comment "cali:O4y8EeWAzzRi80d7" -m comment --comment "Start of policies" -j MARK --set-xmark 0x0/0x20000
-A cali-tw-calid9825211534 -m comment --comment "cali:XXTWIOH8zJHC6F2M" -m mark --mark 0x0/0x20000 -j cali-pi-_3CJ_GmvE9pcCktVJ2ep
-A cali-tw-calid9825211534 -m comment --comment "cali:Q2O5OO4Abufxzz4Q" -m comment --comment "Return if policy accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calid9825211534 -m comment --comment "cali:d0T2DlySlXQUPfND" -m comment --comment "Drop if no policies passed packet" -m mark --mark 0x0/0x20000 -j DROP
-A cali-tw-calid9825211534 -m comment --comment "cali:9QJEHG9bzWncvvmE" -j cali-pri-_kJqfZpgUe7r2t4A-14
-A cali-tw-calid9825211534 -m comment --comment "cali:oa7XoInVO5qJ74wS" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calid9825211534 -m comment --comment "cali:_HWKqNpN27usdx4c" -j cali-pri-_4yi5_iSUAwsU8zMHTk
-A cali-tw-calid9825211534 -m comment --comment "cali:_WijCSKyHbC5oZCN" -m comment --comment "Return if profile accepted" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-tw-calid9825211534 -m comment --comment "cali:WfbtddNSSoB2gK6w" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Tue May  3 13:49:27 2022
# Generated by iptables-save v1.8.7 on Tue May  3 13:49:27 2022
*nat
:PREROUTING ACCEPT [400:18064]
:INPUT ACCEPT [16:784]
:OUTPUT ACCEPT [215:12916]
:POSTROUTING ACCEPT [215:12916]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-2M5IECUR7EUAU5UA - [0:0]
:KUBE-SEP-6KHDERWAHBSOMPCL - [0:0]
:KUBE-SEP-FMOB4VYBIYZ6WDUE - [0:0]
:KUBE-SEP-GZGYMUG254RQ3AEL - [0:0]
:KUBE-SEP-HK2J52TVCK26BEUF - [0:0]
:KUBE-SEP-IZD2VEIR2CQ7TS22 - [0:0]
:KUBE-SEP-O2YBCUH6QJN3JBDC - [0:0]
:KUBE-SEP-UA2IA6LMSJ5XO46Z - [0:0]
:KUBE-SEP-VUOGIG3YHRTZPEPG - [0:0]
:KUBE-SEP-VY23YRQ6R5AKSC44 - [0:0]
:KUBE-SEP-W4GJM65E25VYJ7B3 - [0:0]
:KUBE-SEP-WUP3CWRCTDJRHF3E - [0:0]
:KUBE-SEP-XWSFE3NNFQUUP4JP - [0:0]
:KUBE-SEP-Z6ZY7IZ6WJS62SEB - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-F4S4NECBRJWYJZKI - [0:0]
:KUBE-SVC-I24EZXP75AX5E7TU - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-KQVGIOWQAVNMB2ZL - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-RK657RLKDNVNU64O - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-UF3C73IRUY43UWK5 - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -p tcp -m comment --comment "default/discovery-service-k8s" -m tcp --dport 30050 -j KUBE-SVC-UF3C73IRUY43UWK5
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-2M5IECUR7EUAU5UA -s 192.168.236.130/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-2M5IECUR7EUAU5UA -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 192.168.236.130:53
-A KUBE-SEP-6KHDERWAHBSOMPCL -s 192.168.236.132/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-6KHDERWAHBSOMPCL -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 192.168.236.132:9153
-A KUBE-SEP-FMOB4VYBIYZ6WDUE -s 145.100.134.85/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
-A KUBE-SEP-FMOB4VYBIYZ6WDUE -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 145.100.134.85:5473
-A KUBE-SEP-GZGYMUG254RQ3AEL -s 192.168.236.132/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-GZGYMUG254RQ3AEL -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 192.168.236.132:53
-A KUBE-SEP-HK2J52TVCK26BEUF -s 192.168.236.133/32 -m comment --comment "calico-apiserver/calico-api:apiserver" -j KUBE-MARK-MASQ
-A KUBE-SEP-HK2J52TVCK26BEUF -p tcp -m comment --comment "calico-apiserver/calico-api:apiserver" -m tcp -j DNAT --to-destination 192.168.236.133:5443
-A KUBE-SEP-IZD2VEIR2CQ7TS22 -s 192.168.236.130/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-IZD2VEIR2CQ7TS22 -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 192.168.236.130:53
-A KUBE-SEP-O2YBCUH6QJN3JBDC -s 192.168.236.129/32 -m comment --comment "calico-apiserver/calico-api:apiserver" -j KUBE-MARK-MASQ
-A KUBE-SEP-O2YBCUH6QJN3JBDC -p tcp -m comment --comment "calico-apiserver/calico-api:apiserver" -m tcp -j DNAT --to-destination 192.168.236.129:5443
-A KUBE-SEP-UA2IA6LMSJ5XO46Z -s 192.168.36.80/32 -m comment --comment "default/discovery-service-k8s" -j KUBE-MARK-MASQ
-A KUBE-SEP-UA2IA6LMSJ5XO46Z -p tcp -m comment --comment "default/discovery-service-k8s" -m tcp -j DNAT --to-destination 192.168.36.80:5050
-A KUBE-SEP-VUOGIG3YHRTZPEPG -s 192.168.236.131/32 -m comment --comment "calico-system/calico-kube-controllers-metrics:metrics-port" -j KUBE-MARK-MASQ
-A KUBE-SEP-VUOGIG3YHRTZPEPG -p tcp -m comment --comment "calico-system/calico-kube-controllers-metrics:metrics-port" -m tcp -j DNAT --to-destination 192.168.236.131:9094
-A KUBE-SEP-VY23YRQ6R5AKSC44 -s 192.168.236.130/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-VY23YRQ6R5AKSC44 -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 192.168.236.130:9153
-A KUBE-SEP-W4GJM65E25VYJ7B3 -s 192.168.36.79/32 -m comment --comment "default/mysql-service-k8s" -j KUBE-MARK-MASQ
-A KUBE-SEP-W4GJM65E25VYJ7B3 -p tcp -m comment --comment "default/mysql-service-k8s" -m tcp -j DNAT --to-destination 192.168.36.79:3306
-A KUBE-SEP-WUP3CWRCTDJRHF3E -s 145.100.134.86/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-WUP3CWRCTDJRHF3E -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 145.100.134.86:6443
-A KUBE-SEP-XWSFE3NNFQUUP4JP -s 192.168.236.132/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-XWSFE3NNFQUUP4JP -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 192.168.236.132:53
-A KUBE-SEP-Z6ZY7IZ6WJS62SEB -s 145.100.134.87/32 -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-MARK-MASQ
-A KUBE-SEP-Z6ZY7IZ6WJS62SEB -p tcp -m comment --comment "calico-system/calico-typha:calico-typha" -m tcp -j DNAT --to-destination 145.100.134.87:5473
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.105.86.14/32 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha cluster IP" -m tcp --dport 5473 -j KUBE-SVC-RK657RLKDNVNU64O
-A KUBE-SERVICES -d 10.102.232.84/32 -p tcp -m comment --comment "default/discovery-service-k8s cluster IP" -m tcp --dport 5050 -j KUBE-SVC-UF3C73IRUY43UWK5
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
-A KUBE-SERVICES -d 10.111.103.192/32 -p tcp -m comment --comment "calico-system/calico-kube-controllers-metrics:metrics-port cluster IP" -m tcp --dport 9094 -j KUBE-SVC-KQVGIOWQAVNMB2ZL
-A KUBE-SERVICES -d 10.100.208.53/32 -p tcp -m comment --comment "calico-apiserver/calico-api:apiserver cluster IP" -m tcp --dport 443 -j KUBE-SVC-I24EZXP75AX5E7TU
-A KUBE-SERVICES -d 10.109.170.205/32 -p tcp -m comment --comment "default/mysql-service-k8s cluster IP" -m tcp --dport 3306 -j KUBE-SVC-F4S4NECBRJWYJZKI
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 ! -s 192.168.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-2M5IECUR7EUAU5UA
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-XWSFE3NNFQUUP4JP
-A KUBE-SVC-F4S4NECBRJWYJZKI ! -s 192.168.0.0/16 -d 10.109.170.205/32 -p tcp -m comment --comment "default/mysql-service-k8s cluster IP" -m tcp --dport 3306 -j KUBE-MARK-MASQ
-A KUBE-SVC-F4S4NECBRJWYJZKI -m comment --comment "default/mysql-service-k8s" -j KUBE-SEP-W4GJM65E25VYJ7B3
-A KUBE-SVC-I24EZXP75AX5E7TU ! -s 192.168.0.0/16 -d 10.100.208.53/32 -p tcp -m comment --comment "calico-apiserver/calico-api:apiserver cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-I24EZXP75AX5E7TU -m comment --comment "calico-apiserver/calico-api:apiserver" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-O2YBCUH6QJN3JBDC
-A KUBE-SVC-I24EZXP75AX5E7TU -m comment --comment "calico-apiserver/calico-api:apiserver" -j KUBE-SEP-HK2J52TVCK26BEUF
-A KUBE-SVC-JD5MR3NA4I4DYORP ! -s 192.168.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-VY23YRQ6R5AKSC44
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-SEP-6KHDERWAHBSOMPCL
-A KUBE-SVC-KQVGIOWQAVNMB2ZL ! -s 192.168.0.0/16 -d 10.111.103.192/32 -p tcp -m comment --comment "calico-system/calico-kube-controllers-metrics:metrics-port cluster IP" -m tcp --dport 9094 -j KUBE-MARK-MASQ
-A KUBE-SVC-KQVGIOWQAVNMB2ZL -m comment --comment "calico-system/calico-kube-controllers-metrics:metrics-port" -j KUBE-SEP-VUOGIG3YHRTZPEPG
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 192.168.0.0/16 -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-WUP3CWRCTDJRHF3E
-A KUBE-SVC-RK657RLKDNVNU64O ! -s 192.168.0.0/16 -d 10.105.86.14/32 -p tcp -m comment --comment "calico-system/calico-typha:calico-typha cluster IP" -m tcp --dport 5473 -j KUBE-MARK-MASQ
-A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-FMOB4VYBIYZ6WDUE
-A KUBE-SVC-RK657RLKDNVNU64O -m comment --comment "calico-system/calico-typha:calico-typha" -j KUBE-SEP-Z6ZY7IZ6WJS62SEB
-A KUBE-SVC-TCOU7JCQXEZGVUNU ! -s 192.168.0.0/16 -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-IZD2VEIR2CQ7TS22
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-GZGYMUG254RQ3AEL
-A KUBE-SVC-UF3C73IRUY43UWK5 ! -s 192.168.0.0/16 -d 10.102.232.84/32 -p tcp -m comment --comment "default/discovery-service-k8s cluster IP" -m tcp --dport 5050 -j KUBE-MARK-MASQ
-A KUBE-SVC-UF3C73IRUY43UWK5 -p tcp -m comment --comment "default/discovery-service-k8s" -m tcp --dport 30050 -j KUBE-MARK-MASQ
-A KUBE-SVC-UF3C73IRUY43UWK5 -m comment --comment "default/discovery-service-k8s" -j KUBE-SEP-UA2IA6LMSJ5XO46Z
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-POSTROUTING -o tunl0 -m comment --comment "cali:SXWvdsbh4Mw7wOln" -m addrtype ! --src-type LOCAL --limit-iface-out -m addrtype --src-type LOCAL -j MASQUERADE --random-fully
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
-A cali-nat-outgoing -m comment --comment "cali:flqWnvo8yq4ULQLa" -m set --match-set cali40masq-ipam-pools src -m set ! --match-set cali40all-ipam-pools dst -j MASQUERADE --random-fully
COMMIT
# Completed on Tue May  3 13:49:27 2022
# Generated by iptables-save v1.8.7 on Tue May  3 13:49:27 2022
*mangle
:PREROUTING ACCEPT [280848:14638889]
:INPUT ACCEPT [17041979:3315462522]
:FORWARD ACCEPT [142063:6440402]
:OUTPUT ACCEPT [17221341:3500739152]
:POSTROUTING ACCEPT [17223378:3500872827]
:KUBE-PROXY-CANARY - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A cali-POSTROUTING -m comment --comment "cali:NX-7roTexQ3fGRfU" -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-POSTROUTING -m comment --comment "cali:nnqPh8lh2VOogSzX" -j MARK --set-xmark 0x0/0xf0000
-A cali-POSTROUTING -m comment --comment "cali:nquN8Jw8Tz72pcBW" -m conntrack --ctstate DNAT -j cali-to-host-endpoint
-A cali-POSTROUTING -m comment --comment "cali:jWrgvDQ0xEZHmta3" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j RETURN
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:KX7AGNd6rMcDUai6" -m mark --mark 0x10000/0x10000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:wNH7KsA3ILKJBsY9" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:Cg96MgVuoPm7UMRo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x10000/0x10000 -j ACCEPT
COMMIT
# Completed on Tue May  3 13:49:27 2022
